Added a Java 17 entry